<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login"
    android:fitsSystemWindows="true"
    android:focusable="false"
    android:touchscreenBlocksFocus="false"
    android:transitionGroup="false"
    android:fillViewport="false"
    android:focusableInTouchMode="false"
    tools:context=".activity.LoginActivity">
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/back_blue_login"
    android:fitsSystemWindows="true"
    android:focusable="false">-->

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:weightSum="1">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="40dp"

        android:layout_gravity="center_horizontal"
        android:src="@drawable/logomdt"
        android:layout_marginTop="20dp" />

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/colorWhite"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/username"
            android:drawableLeft="@drawable/ic_account_circle_white_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="number"
            android:hint="@string/lblCedula"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textIsSelectable="false" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorWhite"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/password"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:hint="@string/lblPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:onClick="checkLogin"
        android:text="@string/btnLogin"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonselector"/>

    <TextView android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="view_signUpActivity"
        android:textColor="@color/colorWhite"
        android:text="@string/lblLinkSignup"
        android:gravity="center"
        android:textSize="16dip"/>

</LinearLayout>
<!--</RelativeLayout>-->
</ScrollView>